internal/components/meshexpansion/testdata/icp-test-cr.yaml
apiVersion: servicemesh.cisco.com/v1alpha1
kind: IstioControlPlane
metadata:
  name: cp-v113x
  namespace: istio-system
spec:
  version: "1.13.3"
  mode: ACTIVE
  networkName: network-bogus
  distribution: cisco
  meshExpansion:
    enabled: true
    istiod:
      expose: true
    webhook:
      expose: true
    clusterServices:
      expose: true
    gateway:
      metadata:
        labels:
          imgw-label: labelvalue
        annotations:
          imgw-annotation: annotationvalue
      runAsRoot: true
      service:
        ports:
        - name: tcp-smt
          port: 56000
          protocol: TCP
          targetPort: 56000
        type: ClusterIP
      deployment:
        env:
        - name: ISTIO_BOGUS_ENV
          value: "true"
        metadata:
          annotations:
            deploymentannotation: value
